[gd_scene load_steps=9 format=3 uid="uid://crqbkaa1clrg3"]

[ext_resource type="Script" path="res://scripts/game.gd" id="1_7ygpi"]
[ext_resource type="Texture2D" uid="uid://bi5rjk6lil5iv" path="res://assets/PNG/background.png" id="1_p0aws"]
[ext_resource type="PackedScene" uid="uid://bbdrru3pjrqtq" path="res://scenes/rock_up.tscn" id="3_okves"]
[ext_resource type="PackedScene" uid="uid://jjpmbmddjmp3" path="res://scenes/rock_down.tscn" id="4_x7ta5"]
[ext_resource type="PackedScene" uid="uid://dwx36tq4acejy" path="res://scenes/cloud.tscn" id="5_bxwbk"]
[ext_resource type="PackedScene" uid="uid://lr61hk6y0dmc" path="res://scenes/reward.tscn" id="6_dxywd"]
[ext_resource type="PackedScene" uid="uid://b5j0lp3dkspay" path="res://scenes/level_generator.tscn" id="7_4u61r"]
[ext_resource type="PackedScene" uid="uid://d6k7oe5haomm" path="res://scenes/generator_area.tscn" id="8_o56dc"]

[node name="Game" type="Node2D"]
script = ExtResource("1_7ygpi")

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer1" type="ParallaxLayer" parent="ParallaxBackground"]

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer1"]
texture = ExtResource("1_p0aws")
centered = false

[node name="RockUp" parent="." instance=ExtResource("3_okves")]
position = Vector2(385, 651)

[node name="RockDown" parent="." instance=ExtResource("4_x7ta5")]
position = Vector2(641, -3)

[node name="Cloud" parent="." instance=ExtResource("5_bxwbk")]
position = Vector2(508, 142)

[node name="Reward" parent="." instance=ExtResource("6_dxywd")]
position = Vector2(600, 364)

[node name="LevelGenerator" parent="." instance=ExtResource("7_4u61r")]

[node name="GeneratorArea" parent="." instance=ExtResource("8_o56dc")]
position = Vector2(1229, -5)
collision_layer = 16
collision_mask = 14
